vlib/v/parser/tests/long_generic_err.out
vlib/v/parser/tests/long_generic_err.vv:1:17: error: generic parameter name needs to be exactly one char
    1 | fn long_generic<Abc>() {}
      |                 ~~~
