vlib/v/parser/tests/long_generic_err.vv
fn long_generic<Abc>() {}
